objects/ProductionEstimate__c/ProductionEstimate__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This is to use Production Estimate in place of Standard Estimate &amp; New Copy Schedule Button.</description>
    <label>Job Suite Controls</label>
</CustomObject>