objects/ProductionEstimate__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This One Is for to Activate Production Estimate in place of Standard Estimate</description>
    <inlineHelpText>This One Is for to Activate Production Estimate in place of Standard Estimate</inlineHelpText>
    <label>Production Estimate Active</label>
    <type>Checkbox</type>
</CustomField>