objects/ProductionEstimate__c/fields/Copy_Schedule_Button__c.field-meta.xml
<CustomField>
    <fullName>Copy_Schedule_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This One is for Switching  on &amp; off of Copy Schedule button New &amp; Old on Schedule Tab.</description>
    <inlineHelpText>Copy Schedule - All Active Jobs(Button)</inlineHelpText>
    <label>Copy Schedule Button New</label>
    <type>Checkbox</type>
</CustomField>