objects/ProductionEstimate__c/fields/DisableJobChatterforSPClientContac__c.field-meta.xml
<CustomField>
    <fullName>DisableJobChatterforSPClientContac__c</fullName>
    <defaultValue>false</defaultValue>
    <description>HideChatterFeedForSPClient on jobs</description>
    <label>Disable Job Chatter for SP ClientContact</label>
    <type>Checkbox</type>
</CustomField>