objects/ProductionEstimate__c/fields/Display_Client_Contact__c.field-meta.xml
<CustomField>
    <fullName>Display_Client_Contact__c</fullName>
    <defaultValue>true</defaultValue>
    <description>To display the Client Contact field in the Job New/Edit Layout or Not (BLIH)</description>
    <label>Display Client Contact</label>
    <type>Checkbox</type>
</CustomField>