objects/ProductionEstimate__c/fields/Email_Functionality__c.field-meta.xml
<CustomField>
    <fullName>Email_Functionality__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Functionality</label>
    <type>Checkbox</type>
</CustomField>