objects/ProductionEstimate__c/fields/Email_Service_address__c.field-meta.xml
<CustomField>
    <fullName>Email_Service_address__c</fullName>
    <inlineHelpText>This will going to use in Email address for email to non-licensed user functionality</inlineHelpText>
    <label>Email Service address</label>
    <length>200</length>
    <type>Text</type>
</CustomField>