objects/ProductionEstimate__c/fields/Email_Service_Address_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_Service_Address_Name__c</fullName>
    <inlineHelpText>This will going to use in Email address Display name for email to non-licensed user functionality</inlineHelpText>
    <label>Email Service Address Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>