objects/ProductionEstimate__c/fields/Notes_and_Files_Tab_Setting__c.field-meta.xml
<CustomField>
    <fullName>Notes_and_Files_Tab_Setting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notes and Files Tab Setting</label>
    <type>Checkbox</type>
</CustomField>