objects/ProductionEstimate__c/fields/Old_Time_Sheet_Flow__c.field-meta.xml
<CustomField>
    <fullName>Old_Time_Sheet_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Old Time Sheet Flow</label>
    <type>Checkbox</type>
</CustomField>