objects/ProductionEstimate__c/fields/Org_URL__c.field-meta.xml
<CustomField>
    <fullName>Org_URL__c</fullName>
    <label>Site_Org_URL</label>
    <type>Url</type>
</CustomField>