objects/ProductionEstimate__c/fields/Recalculate_Schedule_Job__c.field-meta.xml
<CustomField>
    <fullName>Recalculate_Schedule_Job__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recalculate Schedule Job</label>
    <type>Checkbox</type>
</CustomField>