objects/ProductionEstimate__c/fields/Remove_Required_of_Job_name__c.field-meta.xml
<CustomField>
    <fullName>Remove_Required_of_Job_name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove Required  of Job name</label>
    <type>Checkbox</type>
</CustomField>