objects/ProductionEstimate__c/fields/Shipment_Tab__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Tab__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show/hide shipment tab in Job detail page</description>
    <label>Shipment Tab</label>
    <type>Checkbox</type>
</CustomField>