objects/ProductionEstimate__c/fields/Task_Remainder_Emails__c.field-meta.xml
<CustomField>
    <fullName>Task_Remainder_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used to send emails to next task assignee&apos;s  in the tasks after previous task done</description>
    <label>Task  Remainder Emails</label>
    <type>Checkbox</type>
</CustomField>