objects/ProductionEstimate__c/fields/Team_Auto_Follow_Job_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Team_Auto_Follow_Job_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Team Auto Follow Job Trigger</label>
    <type>Checkbox</type>
</CustomField>