objects/ProductionEstimate__c/fields/TS_Entry_Button__c.field-meta.xml
<CustomField>
    <fullName>TS_Entry_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Turn on and off TS Entry Button on home page task due and Job detail page Job Time Tab</description>
    <label>TS Entry Button</label>
    <type>Checkbox</type>
</CustomField>