objects/ProductionEstimate__c/fields/Update_Staff__c.field-meta.xml
<CustomField>
    <fullName>Update_Staff__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Update Staff  button (Dev item #2524) in Job team section under the job detail page.</description>
    <label>Update Staff</label>
    <type>Checkbox</type>
</CustomField>